--- a/website/default.css
+++ b/website/default.css
@@ -126,16 +126,19 @@ H2#title {
 }
 #content_container UL {
     margin: 1em;
-    padding-left: 20pt;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 #content_container P {
     margin: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 #content_container PRE {
     background-color: #E0E0E0;
-    margin-left: 30pt;
-    margin-right: 30pt;
-    margin-bottom: 12pt;
+    margin: 1em;
+    margin-left: 4em;
+    margin-right: 4em;
 }
 #content_container TABLE {
     margin-left: 3em;
