--- a/clients/java/gdstyle.css
+++ b/clients/java/gdstyle.css
@@ -1,157 +1,153 @@
-a {
-     font-family: Arial, Helvetica, sans-serif;
-     color: #0081ab;
-     text-decoration: none;
-}
-a.toc_main {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: small;
-     font-weight: bold;
-     color: black;
-     list-style-type: none;
-}
-a.toc {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: x-small;
-     color: black;
-     list-style-type: none;
-}
-a:hover {
-     color:blue;
-     text-decoration:underline;
+BODY {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 h1 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 18pt;
-     font-weight: bold;
-     letter-spacing: 3pt;
-     color: #CC3333;
-     background-color: #DDDDDD;
-     margin-top: 0px;
-     margin-right: 30px;
-     margin-bottom: 30px;
-     text-align: right;
-     text-transform: uppercase;
+    margin-top: 12pt;
+    line-height: 16pt;
+    font-size: 14pt;
+    font-variant: small-caps;
+    text-indent: 10pt;
 }
 h2 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 14pt;
-     font-weight: bold;
-     letter-spacing: 1pt;
-     color: #CC3333;
-     background-color: #DDDDDD;
-     margin-top: 30px;
-     margin-right: 30px;
-     text-align: right;
-     text-indent: 2px;
+    margin-top: 12pt;
+    font-variant: small-caps;
+    font-size: 12pt;
+    padding-left: 10pt;
 }
 h3 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-weight: bold;
-     color: #000000;
-     margin-left: 10px;
+    font-size: 11pt;
+    font-variant: small-caps;
+    margin-top: 1em;
+    padding-left: 10pt;
 }
 h4 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-weight: bold;
-     color: #000000;
-     margin-left: 10px;
+    font-size: 10pt;
+    font-variant: small-caps;
+    margin-top: 1em;
+    padding-left: 10pt;
 }
 p {
-     font-family: Arial, Helvetica, sans-serif;
-     color: #000000;
-     margin-right: 30px;
-     margin-left: 30px;
+    font-size: 10pt;
+    margin: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 pre {
-     font-size: 10pt;
-     background-color: #EEEEEE;
-     margin-right: 30px;
-     margin-left: 30px;
-     color: #000000;
+    background-color: #E0E0E0;
+    margin: 1em;
+    margin-left: 4em;
+    margin-right: 4em;
+}
+ul {
+    margin: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
+}
+ol {
+    margin: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 dt {
-     font-family: Arial, Helvetica, sans-serif;
-     margin-top: 6px;
-     margin-right: 30px;
-     margin-left: 30px;
+    font-size: 10pt;
+    margin-top: 6px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 dd {
-     font-family: Arial, Helvetica, sans-serif;
-     margin-right: 60px;
-     margin-left: 60px;
+    font-size: 10pt;
+    margin-right: 60px;
+    margin-left: 60px;
+}
+th {
+    font-size: 10pt;
+}
+td {
+    font-size: 10pt;
 }
 blockquote {
-     font-family: Arial, Helvetica, sans-serif;
-     color: #000000;
-     font-size: 10pt;
-     font-weight: bold;
-     margin-right: 60px;
-     margin-left: 60px;
+    font-size: 10pt;
+    font-weight: bold;
+    margin-right: 60px;
+    margin-left: 60px;
 }
 .toc_1 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 12pt;
-     font-variant: small-caps;
-     font-weight: bold;
-     letter-spacing: 1pt;
-     margin-top:   10px;
-     margin-left:  12px;
-     margin-right: 15px;
-     margin-bottom: 0px;
-     background-color: #DDDDDD;
+    font-variant: small-caps;
+    margin:       0px;
+    text-indent:  6px;
+    line-height: 16pt;
+    background-color: #01415c;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    border-color: white;
 }
 .toc_2 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 10pt;
-     margin-top:    3px;
-     margin-left:  24px;
-     margin-right:  0px;
-     margin-bottom: 0px;
-     background-color: #FFFFFF;
+    margin:        0px;
+    padding-left:  10px;
+    padding-right: 10px;
+    padding-top:   4px;
 }
 .toc_3 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 9pt;
-     margin-left:  36px;
-     margin-top:    0px;
-     margin-right:  0px;
-     margin-bottom: 0px;
-     background-color: #FFFFFF;
+    margin:        0px;
+    padding-left:  20px;
+    padding-right: 10px;
 }
 .toc_4 {
-     font-family: Arial, Helvetica, sans-serif;
-     font-size: 8pt;
-     margin-left:  48px;
-     margin-top:    0px;
-     margin-right:  0px;
-     margin-bottom: 0px;
-     background-color: #FFFFFF;
+    margin:        0px;
+    padding-left:  30px;
+    padding-right: 10px;
 }
 .header {
-     font-family: Arial, Helvetica, sans-serif;
-     font-variant: small-caps;
-     font-size: x-small;
-     letter-spacing: 1pt;
-     color: #333333;
+    font-weight: bold;
+    font-size: small;
+    padding-top:    4pt;
+    padding-left:  10pt;
+    padding-bottom: 4pt;
+    color: #ffffff;
+    background-color: #01415c;
 }
 .footer {
-     font-family: Arial, Helvetica, sans-serif;
-     font-variant: small-caps;
-     font-size: x-small;
-     letter-spacing: 1pt;
-     background-color: #DDDDDD;
-     color: #000000;
-}
-li {
-     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-variant: small-caps;
+    font-size: x-small;
 }
 .tdbgcolor {
-     background-color: #CC3333;
+    background-color: #b9cdd8;
 }
 .bodybgcolor {
-     background-color: #FFFFFF;
+    background-color: #FFFFFF;
 }
 
+/* Links */
+A:active {
+    text-decoration: none;
+    font-weight: bold;
+    color: #01415c;
+}
+A:link {
+    text-decoration: none;
+    font-weight: bold;
+    color: #01415c;
+}
+A:visited {
+    text-decoration: none;
+    font-weight: bold;
+    color: #01415c;
+}
+A[HREF]:hover {
+    background-color: #b9cdd8;
+    color: blue;
+}
+a.toc_main {
+    font-size: small;
+    font-weight: bold;
+    list-style-type: none;
+    color: white;
+}
+a.toc {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-small;
+    list-style-type: none;
+}
 
