--- a/dotnet/SetupKit/AMQXMS.wxs
+++ b/dotnet/SetupKit/AMQXMS.wxs
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='windows-1252'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2003/01/wi'>
 
-  <Product Name='OpenAMQ XMS Client' Id='D6EA439F-D508-4017-A94A-C287B24CA490'
+  <Product Name='OpenAMQ XMS.Net Client' Id='D6EA439F-D508-4017-A94A-C287B24CA490'
     Language='1033' Codepage='1252' Version='0.5.0' Manufacturer='JP Morgan Chase'>
 
     <Package Id='17709793-2D32-4cf6-9FE7-4CE6892DD564' Keywords='Installer'
-      Description="OpenAMQ XMS Client is a .Net messaging client"
+      Description="OpenAMQ XMS.Net Client is a .Net messaging client"
       Comments='All rights reserved' Manufacturer='JP Morgan Chase'
       InstallerVersion='100' Languages='1033' Compressed='yes' SummaryCodepage='1252' />
     <Media Id='1' Cabinet='AMQXMS.cab' EmbedCab='yes' DiskPrompt="CD-ROM #1" />
@@ -38,9 +38,16 @@
         </Directory>
       </Directory>
     </Directory>
-    <Feature Id='Complete' Level='1'>
-      <ComponentRef Id='MainLibrary' />
-      <ComponentRef Id='LibraryNUnitTests' />
+    <Feature Id='Complete' Title='OpenAMQ XMS.Net' Description='The complete package.' Display='expand' Level='1'
+             ConfigurableDirectory='INSTALLDIR'>
+      <Feature Id='Core' Title='OpenAMQ XMS.Net Assembly' Description='The main AMQ XMS assembly and its dependencies'
+               Level='1' >
+          <ComponentRef Id='MainLibrary' />
+      </Feature>
+      <Feature Id='TestSuite' Title='Nunit Tests' Description='The NUnit Test Suite for AMQ XMS.Net' Level='1000'>
+          <ComponentRef Id='LibraryNUnitTests' />
+      </Feature>
     </Feature>
+    <UIRef Id="WixUI"/>
   </Product>
 </Wix>
