--- a/website/default.css
+++ b/website/default.css
@@ -77,9 +77,9 @@ H1#title {
     width: 80%;
     position: absolute;
     font-variant: small-caps;
-    margin-left: 20pt;
-    margin-top: 20pt;
-    font-size: 18pt;
+    margin-left: 30px;
+    margin-top: 20px;
+    font-size: 200%;
 }
 H2#title {
     width: 80%;
@@ -87,9 +87,9 @@ H2#title {
     position: absolute;
     font-variant: small-caps;
     text-align: right;
-    margin-top: 45pt;
-    margin-left: 20pt;
-    font-size: 12pt;
+    margin-top: 60px;
+    margin-left: 30px;
+    font-size: 130%;
     border-width: 1pt 0 0 0;
     border-style: dashed;
     border-color: #b9cdd8;
@@ -104,44 +104,40 @@ H2#title {
     top: 100px;
 }
 #content_container H1 {
-    margin-top: 12pt;
-    font-size: 12pt;
+    margin-top: 1em;
+    font-size: 140%;
     border-width: 0 0 1pt 0;
     border-style: dashed;
     border-color: #b9cdd8;
 }
 #content_container H2 {
-    margin-top: 12pt;
-    font-size: 10pt;
-    padding-left: 10pt;
+    margin-top: 1em;
+    font-size: 120%;
+    padding-left: 1em;
 }
 #content_container H3 {
-    margin-top: 11pt;
-    font-size: 9pt;
-    padding-left: 10pt;
+    margin-top: 0.5em;
+    font-size: 110%;
+    padding-left: 1em;
 }
 #content_container H4 {
-    margin-top: 10pt;
-    font-size: 8pt;
-    padding-left: 10pt;
+    margin-top: 0.5em;
+    font-size: 100%;
+    padding-left: 1em;
 }
 #content_container UL {
     margin: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
 }
 #content_container OL {
     margin: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
 }
 #content_container LI {
+    margin: 0.2em;
     margin-left: 2em;
 }
 #content_container P {
     margin: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 1em;
 }
 #content_container pre {
     background-color: #cfdee7;
@@ -155,8 +151,11 @@ H2#title {
     font-weight: bold;
     padding-left: 1em;
 }
+#content_container DT {
+    padding-top: 0.5em;
+}
 #content_container DD {
-    margin: 3px;
+    margin: 0.2em;
     font-weight: normal;
     padding-left: 1em;
     padding-right: 1em;
